--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+
 	<title></title>
+	<link rel="stylesheet" type="text/css" href="css/estilos.css">
+	
 </head>
 <body>
+	<h1>Proyecto empresarial</h1>
 
 </body>
 </html>
